src/components/Cover/Cover.module.scss
.Cover {
  background-image: url("../../assets/background.svg");

  .C__Itens {
    height: 350px;
    min-width: 650px;
    width: 50%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .CI__Title {
      color: #fff;
      font-size: 2.625rem;
      font-weight: 700;
      line-height: 3rem;
    }
  }
}

